--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
+	<repositories>
+   <repository>
+     <id>my-repo2</id>
+     <name>your custom repo</name>
+     <url>http://maven.scandilabs.com/repository</url>
+   </repository>
+ </repositories>
 	<dependencies>
 		<!-- Spring -->
 		<dependency>
@@ -39,7 +46,37 @@
 			<artifactId>aspectjrt</artifactId>
 			<version>${org.aspectj-version}</version>
 		</dependency>	
+	        <dependency>
+            <groupId>com.ganyo</groupId>
+            <artifactId>gcm-server</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
+<!-- https://mvnrepository.com/artifact/org.json/json -->
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20160810</version>
+</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.w3c.css/sac -->
+<dependency>
+    <groupId>org.w3c.css</groupId>
+    <artifactId>sac</artifactId>
+    <version>1.3</version>
+</dependency>
 		
+		 <dependency>
+        <groupId>org.zefer.pd4ml</groupId>
+           <artifactId>pd4ml</artifactId>
+           <version>370fx2</version>
+     </dependency>
 		<!-- Logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -58,7 +95,19 @@
 			<version>${org.slf4j-version}</version>
 			<scope>runtime</scope>
 		</dependency>
-		
+		 <dependency>
+			<groupId>org.w3c.css</groupId>
+			<artifactId>sac</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.sourceforge.cssparser/cssparser -->
+     <dependency>
+    <groupId>net.sourceforge.cssparser</groupId>
+    <artifactId>cssparser</artifactId>
+    <version>0.9.4</version>
+    </dependency>
+
+   
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
